fix(Computer Core): Improves the rendering of tables to make the text more visible. Closes #2307

--- a/client/src/components/layouts/LayoutCorners/layout.scss
+++ b/client/src/components/layouts/LayoutCorners/layout.scss
@@ -14,6 +14,20 @@ body {
   height: 100vh;
   margin: 0;
 }
+.client-container {
+  .table {
+    background-color: rgba(0, 0, 0, 0.5);
+    border: solid 1px #888;
+    border-radius: 15px;
+    color: #fff;
+    &.table-striped > tbody > tr:nth-child(odd) {
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+    &.table-hover > tbody > tr:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+    }
+  }
+}
 
 .actionsContainer {
   position: fixed;
